--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "slot-machine": {
+    "slot-library": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/slot-machine",
+            "outputPath": "dist/slot-library",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -25,7 +25,12 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./dist/slot-machine/assets",
+                "output": "./assets"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -66,18 +71,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "slot-machine:build"
+            "browserTarget": "slot-library:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "slot-machine:build:production"
+              "browserTarget": "slot-library:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "slot-machine:build"
+            "browserTarget": "slot-library:build"
           }
         },
         "test": {
@@ -114,15 +119,55 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "slot-machine:serve"
+            "devServerTarget": "slot-library:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "slot-machine:serve:production"
+              "devServerTarget": "slot-library:serve:production"
             }
           }
         }
       }
+    },
+    "slot-machine": {
+      "projectType": "library",
+      "root": "projects/slot-machine",
+      "sourceRoot": "projects/slot-machine/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/slot-machine/tsconfig.lib.json",
+            "project": "projects/slot-machine/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/slot-machine/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/slot-machine/src/test.ts",
+            "tsConfig": "projects/slot-machine/tsconfig.spec.json",
+            "karmaConfig": "projects/slot-machine/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/slot-machine/tsconfig.lib.json",
+              "projects/slot-machine/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
-  "defaultProject": "slot-machine"
+  "defaultProject": "slot-library"
 }
