updating setting to not send analytics data

--- a/angular.json
+++ b/angular.json
@@ -168,6 +168,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "slot-library"
+    }
+  },
+  "defaultProject": "slot-library",
+  "cli": {
+    "analytics": false
+  }
 }
