--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/cli": "^10.0.3",
     "@angular/compiler-cli": "^10.0.4",
     "@angular/language-service": "^10.0.4",
-    "@types/jasmine": "^3.5.11",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.0.23",
     "codelyzer": "^6.0.0",
@@ -44,7 +44,7 @@
     "ng-packagr": "^10.0.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
-    "tslint": "~6.1.2",
+    "tslint": "^6.1.3",
     "typescript": "~3.9.7"
   }
 }
