--- a/angular.json
+++ b/angular.json
@@ -141,7 +141,7 @@
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/slot-machine/tsconfig.lib.json",
             "project": "projects/slot-machine/ng-package.json"
