--- a/package.json
+++ b/package.json
@@ -12,39 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.2",
-    "@angular/common": "^12.0.2",
-    "@angular/compiler": "^12.0.2",
-    "@angular/core": "^12.0.2",
-    "@angular/forms": "^12.0.2",
-    "@angular/platform-browser": "^12.0.2",
-    "@angular/platform-browser-dynamic": "^12.0.2",
-    "@angular/router": "^12.0.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
+    "@angular/animations": "^12.0.4",
+    "@angular/common": "^12.0.4",
+    "@angular/compiler": "^12.0.4",
+    "@angular/core": "^12.0.4",
+    "@angular/forms": "^12.0.4",
+    "@angular/platform-browser": "^12.0.4",
+    "@angular/platform-browser-dynamic": "^12.0.4",
+    "@angular/router": "^12.0.4",
+    "rxjs": "^6.5.3",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.2",
-    "@angular-devkit/build-ng-packagr": "^0.1000.3",
-    "@angular/cli": "^12.0.2",
-    "@angular/compiler-cli": "^12.0.2",
-    "@angular/language-service": "^12.0.2",
-    "@types/jasmine": "^3.5.14",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.0.23",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.2",
-    "karma": "~6.3.2",
+    "@angular-devkit/build-angular": "^12.0.4",
+    "@angular/cli": "^12.0.4",
+    "@angular/compiler-cli": "^12.0.4",
+    "@angular/language-service": "^12.0.4",
+    "@types/jasmine": "^3.7.7",
+    "@types/jasminewd2": "~2.0.9",
+    "@types/node": "^15.12.2",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "ng-packagr": "^12.0.2",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.6.0",
+    "ng-packagr": "^12.0.5",
     "protractor": "~7.0.0",
-    "ts-node": "~8.10.2",
+    "ts-node": "~10.0.0",
     "tslint": "^6.1.3",
-    "typescript": "~4.2.4"
+    "typescript": "^4.2.3"
   }
 }
